--- a/Adventure/main_envsettings.html
+++ b/Adventure/main_envsettings.html
@@ -18,42 +18,42 @@
 <td>.COM;<br>.EXE;<br>.BAT;<br>.CMD;<br>.VBS;<br>.VBE;<br>.JS;<br>.JSE;<br>.WSF;<br>.WSH;<br>.MSC;<br>.PY</td>
 <td>.COM;<br>.EXE;<br>.BAT;<br>.CMD;<br>.VBS;<br>.VBE;<br>.JS;<br>.JSE;<br>.WSF;<br>.WSH;<br>.MSC;<br>.PY</td>
 <td>.COM;<br>.EXE;<br>.BAT;<br>.CMD;<br>.VBS;<br>.VBE;<br>.JS;<br>.JSE;<br>.WSF;<br>.WSH;<br>.MSC;<br>.PY</td>
-<td><font color=gray>.COM;<br>.EXE;<br>.BAT;<br>.CMD;<br>.VBS;<br>.VBE;<br>.JS;<br>.JSE;<br>.WSF;<br>.WSH;<br>.MSC;<br>.PY</font></td>
+<td>.COM;<br>.EXE;<br>.BAT;<br>.CMD;<br>.VBS;<br>.VBE;<br>.JS;<br>.JSE;<br>.WSF;<br>.WSH;<br>.MSC;<br>.PY</td>
 </tr>
 <tr>
 <td>Path</td>
 <td>C:\Xilinx\14.7\ISE_DS\ISE\\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\..\..\..\DocNav;<br>C:\Xilinx\14.7\ISE_DS\PlanAhead\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\powerpc-eabi\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnuwin\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\arm\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_be\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_le\bin;<br>C:\Xilinx\14.7\ISE_DS\common\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\common\lib\nt64;<br>C:\Program Files\Common Files\Microsoft Shared\Windows Live;<br>C:\Perl\site\bin;<br>C:\Perl\bin;<br>C:\ProgramData\Oracle\Java\javapath;<br>C:\Program Files (x86)\NVIDIA Corporation\PhysX\Common;<br>C:\Program Files\ImageMagick-6.8.9-Q16;<br>C:\Windows\system32;<br>C:\Windows;<br>C:\Windows\System32\Wbem;<br>C:\Windows\System32\WindowsPowerShell\v1.0\;<br>C:\Program Files\Intel\WiFi\bin\;<br>C:\Program Files\Common Files\Intel\WirelessCommon\;<br>C:\Program Files\Microsoft SQL Server\110\Tools\Binn\;<br>C:\Program Files (x86)\Microsoft SDKs\TypeScript\1.0\;<br>C:\Program Files (x86)\Skype\Phone\</td>
 <td>C:\Xilinx\14.7\ISE_DS\ISE\\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\..\..\..\DocNav;<br>C:\Xilinx\14.7\ISE_DS\PlanAhead\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\powerpc-eabi\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnuwin\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\arm\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_be\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_le\bin;<br>C:\Xilinx\14.7\ISE_DS\common\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\common\lib\nt64;<br>C:\Program Files\Common Files\Microsoft Shared\Windows Live;<br>C:\Perl\site\bin;<br>C:\Perl\bin;<br>C:\ProgramData\Oracle\Java\javapath;<br>C:\Program Files (x86)\NVIDIA Corporation\PhysX\Common;<br>C:\Program Files\ImageMagick-6.8.9-Q16;<br>C:\Windows\system32;<br>C:\Windows;<br>C:\Windows\System32\Wbem;<br>C:\Windows\System32\WindowsPowerShell\v1.0\;<br>C:\Program Files\Intel\WiFi\bin\;<br>C:\Program Files\Common Files\Intel\WirelessCommon\;<br>C:\Program Files\Microsoft SQL Server\110\Tools\Binn\;<br>C:\Program Files (x86)\Microsoft SDKs\TypeScript\1.0\;<br>C:\Program Files (x86)\Skype\Phone\</td>
 <td>C:\Xilinx\14.7\ISE_DS\ISE\\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\..\..\..\DocNav;<br>C:\Xilinx\14.7\ISE_DS\PlanAhead\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\powerpc-eabi\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnuwin\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\arm\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_be\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_le\bin;<br>C:\Xilinx\14.7\ISE_DS\common\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\common\lib\nt64;<br>C:\Program Files\Common Files\Microsoft Shared\Windows Live;<br>C:\Perl\site\bin;<br>C:\Perl\bin;<br>C:\ProgramData\Oracle\Java\javapath;<br>C:\Program Files (x86)\NVIDIA Corporation\PhysX\Common;<br>C:\Program Files\ImageMagick-6.8.9-Q16;<br>C:\Windows\system32;<br>C:\Windows;<br>C:\Windows\System32\Wbem;<br>C:\Windows\System32\WindowsPowerShell\v1.0\;<br>C:\Program Files\Intel\WiFi\bin\;<br>C:\Program Files\Common Files\Intel\WirelessCommon\;<br>C:\Program Files\Microsoft SQL Server\110\Tools\Binn\;<br>C:\Program Files (x86)\Microsoft SDKs\TypeScript\1.0\;<br>C:\Program Files (x86)\Skype\Phone\</td>
-<td><font color=gray>C:\Xilinx\14.7\ISE_DS\ISE\\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\..\..\..\DocNav;<br>C:\Xilinx\14.7\ISE_DS\PlanAhead\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\powerpc-eabi\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnuwin\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\arm\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_be\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_le\bin;<br>C:\Xilinx\14.7\ISE_DS\common\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\common\lib\nt64;<br>C:\Program Files\Common Files\Microsoft Shared\Windows Live;<br>C:\Perl\site\bin;<br>C:\Perl\bin;<br>C:\ProgramData\Oracle\Java\javapath;<br>C:\Program Files (x86)\NVIDIA Corporation\PhysX\Common;<br>C:\Program Files\ImageMagick-6.8.9-Q16;<br>C:\Windows\system32;<br>C:\Windows;<br>C:\Windows\System32\Wbem;<br>C:\Windows\System32\WindowsPowerShell\v1.0\;<br>C:\Program Files\Intel\WiFi\bin\;<br>C:\Program Files\Common Files\Intel\WirelessCommon\;<br>C:\Program Files\Microsoft SQL Server\110\Tools\Binn\;<br>C:\Program Files (x86)\Microsoft SDKs\TypeScript\1.0\;<br>C:\Program Files (x86)\Skype\Phone\</font></td>
+<td>C:\Xilinx\14.7\ISE_DS\ISE\\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\..\..\..\DocNav;<br>C:\Xilinx\14.7\ISE_DS\PlanAhead\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\powerpc-eabi\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnuwin\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\arm\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_be\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_le\bin;<br>C:\Xilinx\14.7\ISE_DS\common\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\common\lib\nt64;<br>C:\Program Files\Common Files\Microsoft Shared\Windows Live;<br>C:\Perl\site\bin;<br>C:\Perl\bin;<br>C:\ProgramData\Oracle\Java\javapath;<br>C:\Program Files (x86)\NVIDIA Corporation\PhysX\Common;<br>C:\Program Files\ImageMagick-6.8.9-Q16;<br>C:\Windows\system32;<br>C:\Windows;<br>C:\Windows\System32\Wbem;<br>C:\Windows\System32\WindowsPowerShell\v1.0\;<br>C:\Program Files\Intel\WiFi\bin\;<br>C:\Program Files\Common Files\Intel\WirelessCommon\;<br>C:\Program Files\Microsoft SQL Server\110\Tools\Binn\;<br>C:\Program Files (x86)\Microsoft SDKs\TypeScript\1.0\;<br>C:\Program Files (x86)\Skype\Phone\</td>
 </tr>
 <tr>
 <td>XILINX</td>
 <td>C:\Xilinx\14.7\ISE_DS\ISE\</td>
 <td>C:\Xilinx\14.7\ISE_DS\ISE\</td>
 <td>C:\Xilinx\14.7\ISE_DS\ISE\</td>
-<td><font color=gray>C:\Xilinx\14.7\ISE_DS\ISE\</font></td>
+<td>C:\Xilinx\14.7\ISE_DS\ISE\</td>
 </tr>
 <tr>
 <td>XILINX_DSP</td>
 <td>C:\Xilinx\14.7\ISE_DS\ISE</td>
 <td>C:\Xilinx\14.7\ISE_DS\ISE</td>
 <td>C:\Xilinx\14.7\ISE_DS\ISE</td>
-<td><font color=gray>C:\Xilinx\14.7\ISE_DS\ISE</font></td>
+<td>C:\Xilinx\14.7\ISE_DS\ISE</td>
 </tr>
 <tr>
 <td>XILINX_EDK</td>
 <td>C:\Xilinx\14.7\ISE_DS\EDK</td>
 <td>C:\Xilinx\14.7\ISE_DS\EDK</td>
 <td>C:\Xilinx\14.7\ISE_DS\EDK</td>
-<td><font color=gray>C:\Xilinx\14.7\ISE_DS\EDK</font></td>
+<td>C:\Xilinx\14.7\ISE_DS\EDK</td>
 </tr>
 <tr>
 <td>XILINX_PLANAHEAD</td>
 <td>C:\Xilinx\14.7\ISE_DS\PlanAhead</td>
 <td>C:\Xilinx\14.7\ISE_DS\PlanAhead</td>
 <td>C:\Xilinx\14.7\ISE_DS\PlanAhead</td>
-<td><font color=gray>C:\Xilinx\14.7\ISE_DS\PlanAhead</font></td>
+<td>C:\Xilinx\14.7\ISE_DS\PlanAhead</td>
 </tr>
 </TABLE>
 <A NAME="Synthesis Property Settings"></A>
@@ -434,28 +434,28 @@
 <td><b>Default Value</b></td>
 </tr>
 <tr>
-<td><font color=gray>-t</font></td>
-<td><font color=gray>&nbsp;</font></td>
-<td><font color=gray>1</font></td>
-<td><font color=gray>1</font></td>
+<td>-t</td>
+<td>&nbsp;</td>
+<td>1</td>
+<td>1</td>
 </tr>
 <tr>
-<td><font color=gray>-intstyle</font></td>
-<td><font color=gray>&nbsp;</font></td>
-<td><font color=gray>ise</font></td>
-<td><font color=gray>&nbsp;</font></td>
+<td>-intstyle</td>
+<td>&nbsp;</td>
+<td>ise</td>
+<td>&nbsp;</td>
 </tr>
 <tr>
-<td><font color=gray>-ol</font></td>
-<td><font color=gray>Place & Route Effort Level (Overall)</font></td>
-<td><font color=gray>high</font></td>
-<td><font color=gray>std</font></td>
+<td>-ol</td>
+<td>Place & Route Effort Level (Overall)</td>
+<td>high</td>
+<td>std</td>
 </tr>
 <tr>
-<td><font color=gray>-w</font></td>
-<td><font color=gray>&nbsp;</font></td>
-<td><font color=gray>true</font></td>
-<td><font color=gray>false</font></td>
+<td>-w</td>
+<td>&nbsp;</td>
+<td>true</td>
+<td>false</td>
 </tr>
 </TABLE>
 <A NAME="Operating System Information"></A>
@@ -475,28 +475,28 @@
 <td>Intel(R) Core(TM) i7-2670QM CPU @ 2.20GHz/2195 MHz</td>
 <td>Intel(R) Core(TM) i7-2670QM CPU @ 2.20GHz/2195 MHz</td>
 <td>Intel(R) Core(TM) i7-2670QM CPU @ 2.20GHz/2195 MHz</td>
-<td><font color=gray>Intel(R) Core(TM) i7-2670QM CPU @ 2.20GHz/2195 MHz</font></td>
+<td>Intel(R) Core(TM) i7-2670QM CPU @ 2.20GHz/2195 MHz</td>
 </tr>
 <tr>
 <td>Host</td>
 <td>Dilancuan-PC</td>
 <td>Dilancuan-PC</td>
 <td>Dilancuan-PC</td>
-<td><font color=gray>Dilancuan-PC</font></td>
+<td>Dilancuan-PC</td>
 </tr>
 <tr>
 <td>OS Name</td>
 <td>Microsoft Windows 7 , 64-bit</td>
 <td>Microsoft Windows 7 , 64-bit</td>
 <td>Microsoft Windows 7 , 64-bit</td>
-<td><font color=gray>Microsoft Windows 7 , 64-bit</font></td>
+<td>Microsoft Windows 7 , 64-bit</td>
 </tr>
 <tr>
 <td>OS Release</td>
 <td>Service Pack 1  (build 7601)</td>
 <td>Service Pack 1  (build 7601)</td>
 <td>Service Pack 1  (build 7601)</td>
-<td><font color=gray>Service Pack 1  (build 7601)</font></td>
+<td>Service Pack 1  (build 7601)</td>
 </tr>
 </TABLE>
 </BODY> </HTML>
