--- a/Adventure/main_summary.html
+++ b/Adventure/main_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>main Project Status (04/28/2015 - 16:34:10)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>main Project Status (04/29/2015 - 19:01:00)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>Adventure.xise</TD>
@@ -13,31 +13,33 @@
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
 <TD>main</TD>
 <TD BGCOLOR='#FFFF99'><B>Implementation State:</B></TD>
-<TD>Mapped (Failed)</TD>
+<TD>Programming File Generated</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Target Device:</B></TD>
 <TD>xc3s100e-5cp132</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Errors:</B></LI></UL></TD>
-<TD>&nbsp;</TD>
+<TD>
+No Errors</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.7</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD>&nbsp;</TD>
+<TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\_xmsgs/*.xmsgs?&DataKey=Warning'>19 Warnings (0 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
 <TD>Balanced</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Routing Results:</B></LI></UL></TD>
 <TD>
-&nbsp;</TD>
+<A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\main.unroutes'>All Signals Completely Routed</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Strategy:</B></dif></TD>
 <TD><A HREF_DISABLED='Xilinx Default (unlocked)?&DataKey=Strategy'>Xilinx Default (unlocked)</A></TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Timing Constraints:</B></LI></UL></TD>
-<TD>&nbsp;</TD>
+<TD>
+<A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\main.ptwx?&DataKey=ConstraintsData'>All Constraints Met</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Environment:</B></dif></TD>
@@ -46,7 +48,7 @@
 System Settings</A>
 </TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Final Timing Score:</B></LI></UL></TD>
-<TD>&nbsp;&nbsp;</TD>
+<TD>0 &nbsp;<A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\main.twx?&DataKey=XmlTimingReport'>(Timing Report)</A></TD>
 </TR>
 </TABLE>
 
@@ -58,57 +60,57 @@ System Settings</A>
 <TD ALIGN=LEFT><B>Logic Utilization</B></TD><TD><B>Used</B></TD><TD><B>Available</B></TD><TD><B>Utilization</B></TD><TD COLSPAN='2'><B>Note(s)</B></TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice Flip Flops</TD>
-<TD ALIGN=RIGHT>273</TD>
+<TD ALIGN=RIGHT>228</TD>
 <TD ALIGN=RIGHT>1,920</TD>
-<TD ALIGN=RIGHT>14%</TD>
+<TD ALIGN=RIGHT>11%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of 4 input LUTs</TD>
-<TD ALIGN=RIGHT>1,905</TD>
+<TD ALIGN=RIGHT>1,798</TD>
 <TD ALIGN=RIGHT>1,920</TD>
-<TD ALIGN=RIGHT>99%</TD>
+<TD ALIGN=RIGHT>93%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of occupied Slices</TD>
-<TD ALIGN=RIGHT>987</TD>
+<TD ALIGN=RIGHT>958</TD>
 <TD ALIGN=RIGHT>960</TD>
-<TD ALIGN=RIGHT>102%</TD>
-<TD COLSPAN='2'>OVERMAPPED</TD>
+<TD ALIGN=RIGHT>99%</TD>
+<TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of Slices containing only related logic</TD>
-<TD ALIGN=RIGHT>987</TD>
-<TD ALIGN=RIGHT>987</TD>
+<TD ALIGN=RIGHT>958</TD>
+<TD ALIGN=RIGHT>958</TD>
 <TD ALIGN=RIGHT>100%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of Slices containing unrelated logic</TD>
 <TD ALIGN=RIGHT>0</TD>
-<TD ALIGN=RIGHT>987</TD>
+<TD ALIGN=RIGHT>958</TD>
 <TD ALIGN=RIGHT>0%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Total Number of 4 input LUTs</TD>
-<TD ALIGN=RIGHT>1,969</TD>
+<TD ALIGN=RIGHT>1,850</TD>
 <TD ALIGN=RIGHT>1,920</TD>
-<TD ALIGN=RIGHT>102%</TD>
-<TD COLSPAN='2'>OVERMAPPED</TD>
+<TD ALIGN=RIGHT>96%</TD>
+<TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as logic</TD>
-<TD ALIGN=RIGHT>1,905</TD>
+<TD ALIGN=RIGHT>1,798</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as a route-thru</TD>
-<TD ALIGN=RIGHT>64</TD>
+<TD ALIGN=RIGHT>52</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of bonded <A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\main_map.xrpt?&DataKey=IOBProperties'>IOBs</A></TD>
-<TD ALIGN=RIGHT>17</TD>
+<TD ALIGN=RIGHT>19</TD>
 <TD ALIGN=RIGHT>83</TD>
-<TD ALIGN=RIGHT>20%</TD>
+<TD ALIGN=RIGHT>22%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of BUFGMUXs</TD>
@@ -118,7 +120,7 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Average Fanout of Non-Clock Nets</TD>
-<TD ALIGN=RIGHT>4.11</TD>
+<TD ALIGN=RIGHT>4.26</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -127,7 +129,27 @@ System Settings</A>
 
 
 
-
+&nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
+<TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='4'><B>Performance Summary</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=PerformanceSummary"><B>[-]</B></a></TD></TR>
+<TR ALIGN=LEFT>
+<TD BGCOLOR='#FFFF99'><B>Final Timing Score:</B></TD>
+<TD>0 (Setup: 0, Hold: 0, Component Switching Limit: 0)</TD>
+<TD BGCOLOR='#FFFF99'><B>Pinout Data:</B></TD>
+<TD COLSPAN='2'><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\main_par.xrpt?&DataKey=PinoutData'>Pinout Report</A></TD>
+</TR>
+<TR ALIGN=LEFT>
+<TD BGCOLOR='#FFFF99'><B>Routing Results:</B></TD><TD>
+<A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\main.unroutes'>All Signals Completely Routed</A></TD>
+<TD BGCOLOR='#FFFF99'><B>Clock Data:</B></TD>
+<TD COLSPAN='2'><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\main_par.xrpt?&DataKey=ClocksData'>Clock Report</A></TD>
+</TR>
+<TR ALIGN=LEFT>
+<TD BGCOLOR='#FFFF99'><B>Timing Constraints:</B></TD>
+<TD>
+<A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\main.ptwx?&DataKey=ConstraintsData'>All Constraints Met</A></TD>
+<TD BGCOLOR='#FFFF99'><B>&nbsp;</B></TD>
+<TD COLSPAN='2'>&nbsp;</TD>
+</TABLE>
 
 
 
@@ -135,22 +157,22 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\main.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Tue Apr 28 16:33:56 2015</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\_xmsgs/xst.xmsgs?&DataKey=Warning'>18 Warnings (18 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\_xmsgs/xst.xmsgs?&DataKey=Info'>2 Infos (2 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\main.bld'>Translation Report</A></TD><TD>Current</TD><TD>Tue Apr 28 16:34:02 2015</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\main_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Tue Apr 28 16:34:09 2015</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\main.par'>Place and Route Report</A></TD><TD>Out of Date</TD><TD>Tue Apr 28 16:19:08 2015</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\_xmsgs/par.xmsgs?&DataKey=Warning'>3 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\main.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Wed Apr 29 19:00:17 2015</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\_xmsgs/xst.xmsgs?&DataKey=Warning'>7 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\_xmsgs/xst.xmsgs?&DataKey=Info'>1 Info (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\main.bld'>Translation Report</A></TD><TD>Current</TD><TD>Wed Apr 29 19:00:23 2015</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\main_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Wed Apr 29 19:00:29 2015</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\_xmsgs/map.xmsgs?&DataKey=Warning'>4 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\_xmsgs/map.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\main.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Wed Apr 29 19:00:40 2015</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\_xmsgs/par.xmsgs?&DataKey=Warning'>5 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\main.twr'>Post-PAR Static Timing Report</A></TD><TD>Out of Date</TD><TD>Tue Apr 28 16:19:12 2015</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\_xmsgs/trce.xmsgs?&DataKey=Info'>5 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\main.bgn'>Bitgen Report</A></TD><TD>Out of Date</TD><TD>Tue Apr 28 16:15:22 2015</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>1 Warning (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\main.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Wed Apr 29 19:00:44 2015</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\_xmsgs/trce.xmsgs?&DataKey=Info'>5 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\main.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Wed Apr 29 19:00:54 2015</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>3 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
 <TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Sat Apr 25 01:02:14 2015</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Tue Apr 28 16:15:23 2015</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\webtalk.log'>WebTalk Log File</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Tue Apr 28 16:15:27 2015</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>Wed Apr 29 19:00:55 2015</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Wed Apr 29 19:00:59 2015</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 04/28/2015 - 16:34:10</center>
+<br><center><b>Date Generated:</b> 04/29/2015 - 19:01:00</center>
 </BODY></HTML>
